--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <span id="output-auxiliar-texto">0</span>
         <span id="input-output-texto">0</span>
         <div class="calculadora-botones">
+            <!--El orden se realizó de esta forma para poder ordenar todo en un grid de 5x4-->
             <button type="button" class="btn-gris-oscuro funcion" id="btn-clear">C</button>
             <button type="button" class="btn-gris-oscuro funcion" id="btn-clear-all">CA</button>
             <button type="button" class="btn-gris-oscuro operador" id="btn-parimpar">Par</button>
